--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     line-height: 1.6;
     color: var(--text-dark);
     background-color: #f8f9fa;
+    text-align: justify;
 }
 
 .container {
@@ -263,6 +264,7 @@ body {
     line-height: 1.8;
     margin-bottom: 2rem;
     font-size: 1.05em;
+    text-align: justify;
 }
 
 .featured-actions {
@@ -537,12 +539,11 @@ body {
     border-radius: 10px;
     box-shadow: var(--shadow);
 }
-
 .author-bio {
     color: var(--text-light);
     margin-bottom: 1.5rem;
     line-height: 1.8;
-    text-align: justify; !important;
+    text-align: justify;
 }
 
 .author-socials {
